--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   "license": "MIT",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-jsbeautifier": "^2.1.2",
+    "npm": "^6.3.0",
+    "nunjucks": "^3.1.2"
+  },
+  "devDependencies": {
     "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^3.9.3",
+    "gulp-clean-css": "^3.10.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
-    "gulp-jsbeautifier": "^2.1.2",
     "gulp-minify": "^2.1.0",
-    "gulp-nunjucks-render": "^2.2.2",
-    "gulp-rename": "^1.2.2",
-    "nunjucks": "^3.1.2",
+    "gulp-nunjucks-render": "^2.2.3",
+    "gulp-rename": "^1.4.0",
     "run-sequence": "^2.2.1"
   }
 }
