--- a/src/__config/base_config.json
+++ b/src/__config/base_config.json
@@ -1,6 +1,7 @@
 {
     "dist_root": "dist",
-    "app_id": "org.optinomic.template.test",
-    "app_name": "Template",
+    "app_id": "ch.suedhang.apps.rs13.production",
+    "app_name": "Resilienzfragebogen (RS-13)",
+    "app_short_description": "Psychische Widerstandskraft",
     "app_type": "patient"
 }
