--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-jsbeautifier": "^2.1.2",
-    "npm": "^6.13.4",
+    "npm": "^6.14.2",
     "nunjucks": "^3.1.2"
   },
   "devDependencies": {
@@ -17,6 +17,7 @@
     "gulp-clean-css": "^3.10.0",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
+    "gulp-jsonminify": "^1.1.0",
     "gulp-minify": "^2.1.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-rename": "^1.4.0",
